--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ a {
 
 <h1>hi im wuwu (wuwurblx)</h1>
 
-<p>idk how to make a site so im doing this in basic html</p>
+<p>idk how to make a site</p>
 
 <p>some links</p>
 
